# runkit

./: .gitignore  Cargo.toml  README.md  install.sh  start.sh
assets/applications/: tech.geektoshi.Runkit.desktop
assets/dbus-1/services/: tech.geektoshi.Runkit.service
assets/polkit-1/actions/: tech.geektoshi.Runkit.policy
runkit/: Cargo.toml
runkit-core/: Cargo.toml
runkit-core/src/: lib.rs
runkit/src/: actions.rs  formatting.rs  main.rs  ui.rs
runkitd/: Cargo.toml
runkitd/src/: main.rs
