[package]
name = "runkit"
version = "1.0.0"
edition = "2024"

[dependencies]
runkit-core = { path = "../runkit-core" }
gtk4 = { version = "0.8", package = "gtk4" }
libadwaita = { version = "0.6", package = "libadwaita", features = ["v1_4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
humantime = "2.1"
